2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (font_family::make_definite):
	Refactor.  Rename parameter from inscrutable `i` to
	`mounting_position`.  Add `assert()` to enforce invariant: we're
	passed a mounting position that is nonnegative.  Use `pos` as
	short alias of parameter once we're into the function body.
	Relocate conditional branches to front-load early returns as
	well as those requiring little code to handle.  This reduces the
	average indentation level of the function, a readability win.

2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Restore robustness to `EE` misuse.

	* tmac/an.tmac: Add `an*is-in-example` register to keep track
	state of within-exampleness.  Not doing so can cause a spurious
	use of `EE` to wrongly set the inter-paragraph distance to zero.
	(TH): Initialize register.
	(EX): Test register; if set, ignore macro call and, if
	`CHECKSTYLE` warnings are on, throw diagnostic.  Set register.
	(EE): Test register; if clear, ignore macro call and, if
	`CHECKSTYLE` warnings are on, throw diagnostic.  Clear register.

	* tmac/an-ext.tmac (EX, EE): Similar, using `mX` register.
	Because AT&T troff had no `return` request, invert the sense of
	the tests and put the entire macro bodies inside conditionals.

	This regressed post-1.22.4.  Thanks to Ingo Schwarze for the
	report and a proposed patch.

2022-08-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/an-ext.tmac: Refactor.  Rename `mX` to `mZ` so we can use
	`mX` for an "in-example" state register in a future commit.
	Rename `mE` to `mF` to store the current font's mounting
	position.  Bizarrely, `mF` was not already used for this
	purpose.

2022-08-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libgroff/error.cpp (do_error_with_file_and_line):
	Trivially refactor.  Use separate string constant for invariant
	material.  (This will make it easier to, for example, store the